# renaissance-warehouse

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOY.md  DISASTER-RECOVERY.md  GAPS.md  GIT-SYNC-DISCIPLINE.md  OPERATOR-NOTE-20260721.md  README.md  RESUME.md  SCHEMA.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
config/: DAILY_REPORT_SOURCES.md  daily_report_sources.json
core/: __init__.py  config.py  credentials.py  daily_report_sources.py  db.py  email_body_clean.py  orchestrator.py  registry.py  schema_gate_lib.py  sync_run.py
entities/: 48_reply_eaccount.sql  __init__.py  account_campaign_live.py  account_census.py  account_error.py  account_first_cold_send.py  account_label.py  account_status_history.py  account_tag.py  account_tags.py  account_truth.py  batch_registry.py  call_transcription.py  campaign.py  campaign_analytics.py  campaign_analytics_snapshot.py  campaign_infra.py  close_calls.py  close_crm_mirror.py  comms_mirror.py  conversion_event.py  conversion_event.py.pre_w1i_bak  deal_funded.py  dns_sweep.py  domain.py  domain_mx.py  email_outbound_fold.py  email_thread_bulk.py  email_thread_sync.py  esp_matrix.py  f_reply_canonical.py  hub_domain_flag.py  hub_filters_clicks.py  hub_fleet_history.py  hub_problem_ack.py  iam_response_time.py  im_bookings.py  inbox_date_history.py  inbox_hub.py  inbox_loader.py  (+45 more)
handoffs/: 2026-06-20-warehouse-writer-onboarding.md
md-migration/: README.md  RUNBOOK-TUESDAY.md  apply_shim_staging.py  canaries.json  cron-md-write-path.cron  ddl_replay.py  escrow_coverage.py  escrow_export.py  (+18 more)
(+447 files in other folders)
