[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "renaissance-warehouse"
version = "0.1.0"
description = "Internal data consolidation layer for Renaissance"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.0",
    "dnspython>=2.6.0",
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["core*", "entities*", "sources*"]

[tool.ruff]
line-length = 100
target-version = "py312"
